# ChaBiao

./: .gitignore  README.md  README_CN.md  pyproject.toml  take_screenshots.py
chabiao/: __init__.py  __main__.py  api.py  cli.py  core.py  filters.py  gui.py  i18n.py  spotlight.py  theme.py  tools.py  web.py
images/: cli_filter.txt  cli_open.txt  cli_search.txt  cli_spotlight.txt
scripts/: generate_test_data.py  prepare_screenshots.py  publish.bat  publish.sh  screenshot.py
tests/: test_chabiao.py
