[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chabiao"
version = "0.3.0"
description = "Fast spreadsheet viewer, filter and processor - 查表，闪电般的表格查阅筛选工具"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "EasyCam", email = "easycam@github.com" },
]
keywords = ["spreadsheet", "excel", "filter", "viewer", "chinese", "查表"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Utilities",
]
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
gui = ["PySide6>=6.5"]
web = ["fastapi>=0.100", "uvicorn>=0.23", "jinja2>=3.1"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "build>=1.0",
    "twine>=5.0",
]
all = [
    "PySide6>=6.5",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "jinja2>=3.1",
]

[project.scripts]
chabiao = "chabiao.cli:main"

[project.gui-scripts]
chabiao-gui = "chabiao.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["chabiao"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"chabiao/web.py" = ["E501"]
"chabiao/tools.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["chabiao"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true